# sample-python-2

./: db.sqlite3  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main_python-kudulite-310.yml  main_python-kudulite-39.yml  main_python-kudulite-validation.yml  main_python-test-1.yml  main_python-test-2.yml  main_python-test-4.yml  main_release-python.yml
crud/: pyproject.toml  urls.py
crud/templates/crud/: base.html
web/: settings.py  urls.py
