[tool.poetry]
name = "DJANGOAPP"
version = "0.1.0"
description = "A FastAPI application with LangChain integration"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
