# [tool.poetry]
# name = "DJANGOAPP"
# version = "0.1.0"
# description = "A FastAPI application with LangChain integration"
# authors = ["Your Name <your.email@example.com>"]
# readme = "README.md"
# package-mode = false

# [tool.poetry.dependencies]
# python = "^3.10"
# django = "*"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
[project]
name = "django-ogf"
version = "0.1.0"
description = "A simple Django application with placeholder endpoint"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
]
dependencies = [
    "Django>=4.2,<5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/django-ogf"
Repository = "https://github.com/yourusername/django-ogf"

[project.scripts]
django-ogf = "manage:main"

[tool.setuptools]
packages = ["myproject"]

[tool.setuptools.package-data]
myproject = ["*.py"]
