# [tool.poetry]
# name = "DJANGOAPP"
# version = "0.1.0"
# description = "A FastAPI application with LangChain integration"
# authors = ["Your Name <your.email@example.com>"]
# readme = "README.md"
# package-mode = false

# [tool.poetry.dependencies]
# python = "^3.10"
# django = "*"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"
[project]
name = "django-ogf"
version = "0.1.0"
description = "A simple Django application with placeholder endpoint"
requires-python = ">=3.8"
dependencies = [
    "Django>=4.2,<5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
